parkrun-stats - Create PairsTable object.